--- a/index.html
+++ b/index.html
@@ -10,158 +10,159 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>hw-001</title>
+    <title>goit-markup-hw-01</title>
   </head>
   <body>
-    <!-- Header -->
-    <header class="header-background-color">
-      <nav>
-        <a href="./portfolio.html" class="logo-first-link"
-          >Web<span class="logo-second-link">Studio</span></a
+    <header>
+      <nav class="nav-bar">
+        <a href="./index.html" class="logo link"
+          >Web<span class="second-word">Studio</span></a
         >
-        <ul>
-          <li><a href="index.html" class="topline-words-header">Studio</a></li>
+        <ul class="list nav-links">
+          <li><a href="./index.html" class="list-link link">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="topline-words-header"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="list-link link">Portfolio</a>
           </li>
-          <li><a href="" class="topline-words-header">Contacts</a></li>
+          <li><a href="" class="list-link link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="contact">
+        <ul class="list nav-links">
           <li>
-            <a href="mailto:info@devstudio.com" class="address-mail-header"
+            <a href="mailto:info@devstudio.com" class="contact-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-phone-number"
+            <a href="tel:+110001111111" class="contact-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
       </address>
     </header>
-
-    <!-- Hero section -->
     <main>
-      <!-- Section one -->
-      <section class="hero-section-background">
-        <h1 class="hero-section-header">
-          Effective Solutions for Your Business
+      <section class="primary-section">
+        <h1 class="primary-title">
+          Effective Solutions<br />
+          for Your Business
         </h1>
-        <button type="button" class="hero-section-button">Order Service</button>
+        <button type="button" class="hero-button">Order Service</button>
       </section>
-      <!-- Section two -->
-      <section>
-        <h2 hidden>Title</h2>
+      <section class="first-section">
+        <h2 class="sub-title">Title</h2>
         <ul class="list">
           <li>
-            <h3 class="section-two-header">Strategy</h3>
-            <p class="section-two-paragraf">
+            <h3 class="sub-title">Strategy</h3>
+            <p class="sub-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="section-two-header">Punctuality</h3>
-            <p class="section-two-paragraf">
+            <h3 class="sub-title">Punctuality</h3>
+            <p class="sub-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="section-two-header">Diligence</h3>
-            <p class="section-two-paragraf">
+            <h3 class="sub-title">Diligence</h3>
+            <p class="sub-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="section-two-header">Technologies</h3>
-            <p class="section-two-paragraf">
+            <h3 class="sub-title">Technologies</h3>
+            <p class="sub-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-
-      <!-- Section three -->
       <section>
-        <h2 class="section-three-header">What are we doing</h2>
-        <ul calss="list">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/image-one.jpg"
-              alt="Image-one"
+              alt="Code writting"
               width="360"
-              class="image-section-three"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./images/image-two.jpg"
-              alt="Image-two"
+              alt="mobile design"
               width="360"
-              class="image-section-three"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./images/image-three.jpg"
-              alt="Image-three"
+              alt="color design"
               width="360"
-              class="image-section-three"
+              height="300"
             />
           </li>
         </ul>
       </section>
-
-      <!-- Section four -->
-      <section class="section-four-page">
-        <h2 class="section-four-header">Our Team</h2>
+      <section class="team-section">
+        <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li>
-            <img src="./images/team-man-one.jpg" alt="Man-One" width="264" />
-            <h3 class="section-four-names">Mark Guerrero</h3>
-            <p class="section-four-jobs">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team-man-two.jpg" alt="Man-Two" width="264" />
-            <h3 class="section-four-names">Tom Ford</h3>
-            <p class="section-four-jobs">Frontend Developer</p>
-          </li>
-          <li>
+          <li class="team-member">
             <img
-              src="./images/team-women-three.jpg"
-              alt="Woman-three"
+              src="./images/team-man-one.jpg"
+              alt="team member"
               width="264"
             />
-            <h3 class="section-four-names">Camila Garcia</h3>
-            <p class="section-four-jobs">Marketing</p>
+            <h3 class="sub-title">Mark Guerrero</h3>
+            <p class="sub-text">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/team-man-four.jpg" alt="Man-Four" width="264" />
-            <h3 class="section-four-names">Daniel Wilson</h3>
-            <p class="section-four-jobs">UI Designer</p>
+          <li class="team-member">
+            <img
+              src="./images/team-man-two.jpg"
+              alt="team member"
+              width="264"
+            />
+            <h3 class="sub-title">Tom Ford</h3>
+            <p class="sub-text">Frontend Developer</p>
+          </li>
+          <li class="team-member">
+            <img
+              src="./images/team-women-three.jpg"
+              alt="team member"
+              width="264"
+            />
+
+            <h3 class="sub-title">Camila Garcia</h3>
+            <p class="sub-text">Marketing</p>
+          </li>
+          <li class="team-member">
+            <img
+              src="./images/team-man-four.jpg"
+              alt="team member"
+              width="264"
+            />
+
+            <h3 class="sub-title">Daniel Wilson</h3>
+            <p class="sub-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-
-    <!-- Footer section -->
-    <footer class="footer-section-down">
-      <a href="./portfolio.html" class="logo-first-link-light link"
-        >Web<span class="logo-second-link-light link">Studio</span></a
+    <footer class="footer-content">
+      <a href="./index.html" class="footer-logo logo link"
+        >Web<span class="span">Studio</span></a
       >
-      <p class="fotter-paragraf-section">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
+        marketing & growth solutions.
       </p>
-      <address></address>
     </footer>
   </body>
 </html>
