--- a/portfolio.html
+++ b/portfolio.html
@@ -10,191 +10,168 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>hw-002</title>
+    <title>goit-markup-hw-02</title>
   </head>
-  <body style="color: #434455; font-family: Roboto, sans-serif">
-    <!-- Header -->
+  <body>
     <header>
-      <nav>
-        <a href="./portfolio.html" class="logo-first-link link"
-          >Web<span class="logo-second-link link">Studio</span></a
+      <nav class="nav-bar">
+        <a href="./index.html" class="logo link"
+          >Web<span class="second-word">Studio</span></a
         >
         <ul class="list">
+          <li><a href="./index.html" class="list-link link">Studio</a></li>
           <li>
-            <a href="./index.html" class="topline-words-header">Studio</a>
+            <a href="./portfolio.html" class="list-link link">Portfolio</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="topline-words-header"
-              >Portfolio</a
-            >
-          </li>
-          <li><a href="" class="topline-words-header">Contacts</a></li>
+          <li><a href="" class="list-link link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="contact">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="address-mail-header"
+            <a href="mailto:info@devstudio.com" class="contact-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-phone-number"
+            <a href="tel:+110001111111" class="contact-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
       </address>
     </header>
-
     <main>
-      <!-- Buttons -->
       <section>
-        <h1 hidden>Text</h1>
-        <ul class="list">
+        <h1>Portfolio</h1>
+        <ul class="navigation-buttons list">
+          <li><button type="button" class="button">All</button></li>
+          <li><button type="button" class="button">Web Site</button></li>
+          <li><button type="button" class="button">App</button></li>
+          <li><button type="button" class="button">Design</button></li>
+          <li><button type="button" class="button">Marketing</button></li>
+        </ul>
+        <ul class="list portfolio-list">
           <li>
-            <button type="button" class="filter-buttons-section">All</button>
+            <a href="www." class="link">
+              <img
+                src="./images/image-one-hw2.jpg"
+                alt="banking app interface"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Banking App Interface Concept</h2>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
           <li>
-            <button type="button" class="filter-buttons-section">
-              Web Site
-            </button>
+            <a href="www." class="link">
+              <img
+                src="./images/image-two-hw2.jpg"
+                alt="cashless payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <button type="button" class="filter-buttons-section">App</button>
+            <a href="www." class="link">
+              <img
+                src="./images/image-three-hw2.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Meditation App</h2>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
 
           <li>
-            <button type="button" class="filter-buttons-section">Design</button>
+            <a href="www." class="link">
+              <img
+                src="./images/image-four-hw2.jpg"
+                alt="taxi services"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
-
           <li>
-            <button type="button" class="filter-buttons-section">
-              Marketing
-            </button>
+            <a href="www." class="link">
+              <img
+                src="./images/image-five-hw2.jpg"
+                alt="screen ilustration"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
+            </a>
           </li>
-        </ul>
-
-        <!-- Images cards -->
-
-        <!-- Row one -->
-
-        <ul class="list">
           <li>
-            <img
-              src="./images/image-one-hw2.jpg"
-              alt="image-one-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Banking App Interface Concept</h2>
-            <p class="image-card-paragraf">App</p>
+            <a href="www." class="link">
+              <img
+                src="./images/image-six-hw2.jpg"
+                alt="online courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
-        </ul>
-        <ul>
           <li>
-            <img
-              src="./images/image-two-hw2.jpg"
-              alt="image-two-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Cashless Payment</h2>
-            <p class="image-card-paragraf">Marketing</p>
+            <a href="www." class="link">
+              <img
+                src="./images/image-seven-hw2.jpg"
+                alt="instagram stories"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Instagram Stories Concept</h2>
+              <p class="portfolio-text">Design</p>
+            </a>
           </li>
-        </ul>
-        <ul>
           <li>
-            <img
-              src="./images/image-three-hw2.jpg"
-              alt="image-three-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Meditaion App</h2>
-            <p class="image-card-paragraf">App</p>
+            <a href="www." class="link">
+              <img
+                src="./images/image-eight-hw2.jpg"
+                alt="organic food"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
-        </ul>
-
-        <!-- Row two -->
-        <ul>
           <li>
-            <img
-              src="./images/image-four-hw2.jpg"
-              alt="image-four-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Taxi Service</h2>
-            <p class="image-card-paragraf">Marketing</p>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img
-              src="./images/image-five-hw2.jpg"
-              alt="image-five-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Screen Illustrations</h2>
-            <p class="image-card-paragraf">Design</p>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img
-              src="./images/image-six-hw2.jpg"
-              alt="image-six-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Online Courses</h2>
-            <p class="image-card-paragraf">Marketing</p>
-          </li>
-        </ul>
-
-        <!-- Row three -->
-        <ul>
-          <li>
-            <img
-              src="./images/image-seven-hw2.jpg"
-              alt="image-seven-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Instagram Stories Concept</h2>
-            <p class="image-card-paragraf">Design</p>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img
-              src="./images/image-eight-hw2.jpg"
-              alt="image-eight-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Organic Food</h2>
-            <p class="image-card-paragraf">Web Site</p>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <img
-              src="./images/image-nine-hw2.jpg"
-              alt="image-nine-hw2"
-              width="360"
-            />
-            <h2 class="image-card-header">Fresh Coffee</h2>
-            <p class="image-card-paragraf">Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/image-nine-hw2.jpg"
+                alt="fresh coffe2"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
-
-    <!-- Footer section -->
-    <footer class="footer-section-down">
-      <a href="./portfolio.html" class="logo-first-link"
-        >Web<span class="logo-second-link-light">Studio</span></a
+    <footer class="footer-content">
+      <a href="./index.html" class="footer-logo logo link"
+        >Web<span class="span">Studio</span></a
       >
-      <p class="fotter-paragraf-section">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
+        marketing & growth solutions.
       </p>
-      <address></address>
     </footer>
   </body>
 </html>
